--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -46,7 +46,9 @@ a:hover {
 
 @media screen and (min-width: 64em) {
   .btn {
-    padding: 0.75rem 1rem;
+    /* padding: 0.75rem 1rem; */
+    padding: 0.6rem 0.9rem;
+    font-size: 0.9rem;
   }
 }
 
@@ -73,8 +75,8 @@ a:hover {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #1A5A95;  /* #155799; */
-/* background-image: linear-gradient(120deg, #155799, #159957);*/
+  background-color: #2c3e50; /* #1A5A95 blue submitted */ /* #155799; */
+  background-image: linear-gradient(120deg, #2c3e50, #3498db);*/
 }
 
 @media screen and (min-width: 64em) {
