--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,7 +22,7 @@ a:hover {
 
 .btn {
   display: inline-block;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;  /* 1rem */
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
@@ -106,9 +106,9 @@ a:hover {
 
 @media screen and (min-width: 64em) {
   .project-name {
-    font-size: 2.25rem;
+    font-size: 2.25rem; /* 3.25 */
     }
-}  /* 3.25 */
+}
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-name {
@@ -130,9 +130,9 @@ a:hover {
 
 @media screen and (min-width: 64em) {
   .project-tagline {
-    font-size: 1.15rem;
+    font-size: 1.15rem; /* font-size: 1.25rem;*/
   }
-}   /* font-size: 1.25rem;*/
+}
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-tagline {
