--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -75,8 +75,11 @@ a:hover {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #2c3e50; /* #1A5A95 blue submitted */ /* #155799; */
-  background-image: linear-gradient(120deg, #2c3e50, #3498db);*/
+  background-color: #1A5A95;
+  /*
+  background-color: #2c3e50;
+  background-image: linear-gradient(120deg, #2c3e50, #3498db);
+  */
 }
 
 @media screen and (min-width: 64em) {
