--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -280,21 +280,24 @@ a:hover {
     max-width: 64rem;  /* 64 */
     padding: 2rem 4rem; /* 2rem 6rem */
     margin: 0 auto;
-    font-size: 1.1rem;
+    /* font-size: 1.1rem; */
+    font-size: 1.0rem;
   }
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .main-content {
     padding: 2rem 4rem;
-    font-size: 1.1rem;
+    /* font-size: 1.1rem; */
+    font-size: 1.0rem;
   }
 }
 
 @media screen and (max-width: 42em) {
   .main-content {
     padding: 2rem 1rem;
-    font-size: 1rem;
+    /* font-size: 1rem; */
+    font-size: 0.9rem;
   }
 }
 
