--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -75,11 +75,10 @@ a:hover {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #1A5A95;
-  /*
-  background-color: #2c3e50;
-  background-image: linear-gradient(120deg, #2c3e50, #3498db);
-  */
+  /*　background-color: #1A5A95;　*/
+  /* background-color: #4491BA; */
+  background-color: #0E6EA3;
+  /*background-image: linear-gradient(120deg, #2F90B7, #FFFFFF);*/
 }
 
 @media screen and (min-width: 64em) {
